--- a/assets/tech/pages/css/pages.css
+++ b/assets/tech/pages/css/pages.css
@@ -32,7 +32,11 @@ Generated From LESS
 */
 html,
 body {
+  /* width: 100%; */
   height: 100%;
+  /* margin: 0px; */
+  /* padding: 0px; */
+  /* overflow-x: hidden;  */
 }
 /* Body Triggers for layout options 
 ------------------------------------------------------------------
