--- a/assets/tech/pages/css/pages.css
+++ b/assets/tech/pages/css/pages.css
@@ -8998,6 +8998,13 @@ sup.dollar {
   }
 }
 
+@media only screen and (max-width: 1280px) {
+  .header .menu > li {
+    font-size: 12px !important;
+    margin-right: 2px !important;
+  }
+}
+
 .lh-3p6 {
   line-height: 3.6;
 }
